Add 5 list webpages

--- a/basic.html
+++ b/basic.html
@@ -1,100 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Flipkart - Simple Products Table</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background:#f6f8fb; color:#111; }
-    table { width:100%; border-collapse:collapse; background:#fff; box-shadow:0 1px 3px rgba(0,0,0,0.06); }
-    th, td { padding:10px 12px; border-bottom:1px solid #eee; text-align:left; vertical-align:middle; }
-    th { background:#fafafa; font-weight:600; color:#333; }
-    img.prod { width:72px; height:72px; object-fit:cover; border-radius:6px; }
-    .price { font-weight:700; color:#111; }
-    .old { text-decoration:line-through; color:#888; margin-left:8px; font-weight:400; }
-    .discount { color:#16a34a; font-weight:600; margin-left:6px; }
-    .rating { background:#f1f8ff; padding:4px 7px; border-radius:6px; color:#036; font-weight:600; }
-    .out { color:#c00; font-weight:600; }
-    a.buy { background:#2874f0; color:white; padding:6px 10px; border-radius:6px; text-decoration:none; font-size:13px; }
-    @media (max-width:700px){
-      td:nth-child(3), th:nth-child(3) { display:none; } /* hide brand on small screens */
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
 </head>
 <body>
-
-  <h2>Flipkart — Products (simple table)</h2>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Image</th>
-        <th>Product</th>
-        <th>Brand</th>
-        <th>Price</th>
-        <th>Rating</th>
-        <th>Reviews</th>
-        <th>Availability</th>
-        <th>Buy</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td><img class="prod" src="https://via.placeholder.com/120x120?text=Phone" alt="Phone"></td>
-        <td>Smartphone XYZ 6GB/128GB, 6.5&quot; Display</td>
-        <td>TechBrand</td>
-        <td><span class="price">₹12,499</span> <span class="old">₹15,999</span> <span class="discount">22% off</span></td>
-        <td><span class="rating">4.3 ★</span></td>
-        <td>24,512</td>
-        <td>In stock</td>
-        <td><a class="buy" href="#">Buy</a></td>
-      </tr>
-
-      <tr>
-        <td><img class="prod" src="https://via.placeholder.com/120x120?text=Laptop" alt="Laptop"></td>
-        <td>UltraBook Pro 8GB/512GB SSD</td>
-        <td>NoteTech</td>
-        <td><span class="price">₹45,990</span> <span class="old">₹49,990</span> <span class="discount">8% off</span></td>
-        <td><span class="rating">4.6 ★</span></td>
-        <td>6,142</td>
-        <td>In stock</td>
-        <td><a class="buy" href="#">Buy</a></td>
-      </tr>
-
-      <tr>
-        <td><img class="prod" src="https://via.placeholder.com/120x120?text=Earbuds" alt="Earbuds"></td>
-        <td>NoiseCancel Wireless Earbuds</td>
-        <td>SoundMax</td>
-        <td><span class="price">₹1,999</span> <span class="old">₹2,499</span> <span class="discount">20% off</span></td>
-        <td><span class="rating">4.1 ★</span></td>
-        <td>11,230</td>
-        <td>Only 3 left</td>
-        <td><a class="buy" href="#">Buy</a></td>
-      </tr>
-
-      <tr>
-        <td><img class="prod" src="https://via.placeholder.com/120x120?text=TV" alt="TV"></td>
-        <td>Smart LED TV 43&quot; 4K</td>
-        <td>VisionPlus</td>
-        <td><span class="price">₹29,999</span> <span class="old">₹34,999</span> <span class="discount">14% off</span></td>
-        <td><span class="rating">4.4 ★</span></td>
-        <td>8,902</td>
-        <td>In stock</td>
-        <td><a class="buy" href="#">Buy</a></td>
-      </tr>
-
-      <tr>
-        <td><img class="prod" src="https://via.placeholder.com/120x120?text=Mixer" alt="Mixer"></td>
-        <td>Kitchen Mixer Grinder 750W</td>
-        <td>HomeChef</td>
-        <td><span class="price">₹3,499</span> <span class="old">₹4,199</span> <span class="discount">16% off</span></td>
-        <td><span class="rating">4.0 ★</span></td>
-        <td>1,412</td>
-        <td class="out">Out of stock</td>
-        <td><a class="buy" href="#" style="opacity:0.6; pointer-events:none;">Unavailable</a></td>
-      </tr>
-    </tbody>
-  </table>
-
+    
 </body>
+</html>
 </html>
