Updated file with latest changes

--- a/product table.html
+++ b/product table.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <table border="2px" cellspacing="2px" cellpadding="2px" align="center" valign="middle" >
+    <table style="border: 5px dashed rgb(173, 92, 21); background-color: rgb(240, 238, 124);" border="5px"  cellspacing="2px" cellpadding="2px" align="center" valign="middle" >
    <caption><b>PRODUCTS TABLE</b></caption>
    <thead >
    <tr>
