adding 5 webpages done using notepad

--- a/multimedia.html
+++ b/multimedia.html
@@ -13,7 +13,7 @@
             <li><a href="#videos">Videos</a></li>
         </ol>
     </nav>
-    <div id="imags">
+    <div id="images">
     <h1 style="color: cadetblue; text-align: center;">3 random images</h1>
     <img src="https://picsum.photos/id/123/200/300" alt="Random image" width="410px">
     <img src="https://picsum.photos/id/124/200/300" alt="random image" width="410px">
@@ -21,25 +21,21 @@
     </div>
 <div id="audios">
     <h1 style="color: chartreuse; text-align: center;">3 Random Audios</h1>
-    <audio controls autoplay muted>
-        <source src="https://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
+    <audio controls autoplay muted loop src="https://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Kangaroo_MusiQue_-_The_Neverwritten_Role_Playing_Game.mp3">
     </audio>
-    <audio controls autoplay muted>
-        <source src="https://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">
-    </audio>
+    <audio controls autoplay muted loop src="https://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg">  </audio>
     <audio controls autoplay muted src="https://codeskulptor-demos.commondatastorage.googleapis.com/pang/paza-moduless.mp3"></audio>
     
     </div>
-    <div id="videos" >
+    <div id="videos">
         <h1 style="color: blue; text-align: center;">3 random videos</h1>
-    <video controls autoplay muted>
+    <video controls autoplay muted loop>
         <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" width="250px" height="200px">
     </video>
-    <video controls autoplay muted>
+    <video controls autoplay muted loop>
         <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4" width="200px" heigth="200px">
     </video>
-     <video controls autoplay muted>
-        <source src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
+     <video controls autoplay muted loop width="100%" src="https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4">
     </video>
     </div>
 </body>
